# rusty-optics

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md
crates/rusty-optics-fixtures/: Cargo.toml
crates/rusty-optics-fixtures/src/: adf.rs  cli.rs  error.rs  fields.rs  hand_mesh.rs  main.rs  stimulus.rs  summary.rs
crates/rusty-optics-mesh/: Cargo.toml
crates/rusty-optics-mesh/src/: adf_debug.rs  browser_frame.rs  circuit_frame.rs  collider.rs  coordinate.rs  field_frame.rs  lib.rs  mesh_frame.rs  planarian_frame.rs  planarian_interaction.rs  sdf_slice.rs  tests.rs
crates/rusty-optics-model/: Cargo.toml
crates/rusty-optics-model/src/: color.rs  error.rs  ids.rs  lib.rs  projection.rs  tests.rs  vec2.rs
crates/rusty-optics-particles/: Cargo.toml
crates/rusty-optics-particles/src/: animation.rs  appearance.rs  billboard.rs  lib.rs  mask.rs  projection.rs  tests.rs  visual_frame.rs
crates/rusty-optics-schema/: Cargo.toml
crates/rusty-optics-schema/src/: catalog.rs  cli.rs  error.rs  main.rs
crates/rusty-optics-stimulus/: Cargo.toml
crates/rusty-optics-stimulus/src/: cpu_reference.rs  kernel_abi.rs  layers.rs  lib.rs  noise.rs  oscillator.rs  presentation.rs  profile.rs  run_plan.rs  safety.rs  temporal.rs  tests.rs  volume.rs  volume_cpu_reference.rs  volume_preview.rs  volume_probe.rs  volume_profile.rs
docs/: ARCHITECTURE.md  LICENSING.md  PLANARIAN_3D_EXPORT.md  VALIDATION.md
fixtures/: README.md  particle_visual_stack_summary.json
fixtures/fields/: bioelectric_circuit_visual_frame.json  planarian_bioelectric_interaction_intent.json  planarian_bioelectric_visual_sequence.json  surface_field_visual_frame.json
fixtures/hand_mesh/: hand_mesh_browser_debug_frame.json
fixtures/mesh/: adf_debug_visual.json
fixtures/stimulus/: README.md  interference_preview_profile.json  volume_interference_preview_profile.json  volume_only_bright_interference_profile.json
schemas/: README.md  catalog.json
tools/: Build-HandMeshBrowserMatterWasm.ps1  Build-SurfaceFieldPreviewMatterWasm.ps1  Build-SurfaceFieldPreviewWeb3DDeps.ps1  Run-Planarian3DExportSmoke.ps1  Start-HandMeshBrowserPreview.ps1  Start-StimulusPreview.ps1  Start-SurfaceFieldPreview.ps1  check_all.ps1  check_optics_boundaries.py  planarian_3d_export_smoke.cjs
web/hand-mesh-browser-preview/: app.js  index.html  perf-metrics.js  realtime-sdf.js  styles.css
web/stimulus-preview/: README.md  app.js  handoff.js  index.html  styles.css  tuning.js
web/surface-field-preview/: apng-encoder.js  app.js  gif-encoder.js  index.html  planarian-3d-export.js  planarian-3d-readouts.js  planarian-3d.js  styles.css  surface-field-utils.js  video-encoder.js
