[package]
name = "rusty-optics-mesh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
serde = [
    "dep:serde",
    "rusty-matter-mesh/serde",
    "rusty-matter-model/serde",
    "rusty-matter-sdf/serde",
    "rusty-optics-model/serde",
]

[dependencies]
rusty-matter-mesh = { path = "../../../rusty-matter/crates/rusty-matter-mesh" }
rusty-matter-model = { path = "../../../rusty-matter/crates/rusty-matter-model" }
rusty-matter-sdf = { path = "../../../rusty-matter/crates/rusty-matter-sdf" }
rusty-optics-model = { path = "../rusty-optics-model" }
serde = { version = "1", features = ["derive"], optional = true }

[lints]
workspace = true
