[package]
name = "rusty-optics-particles"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
serde = [
    "dep:serde",
    "rusty-matter-model/serde",
    "rusty-matter-particles/serde",
    "rusty-optics-model/serde",
]

[dependencies]
rusty-matter-model = { path = "../../../rusty-matter/crates/rusty-matter-model" }
rusty-matter-particles = { path = "../../../rusty-matter/crates/rusty-matter-particles" }
rusty-optics-model = { path = "../rusty-optics-model" }
serde = { version = "1", features = ["derive"], optional = true }

[lints]
workspace = true

