[package]
name = "rusty-optics-stimulus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
serde = ["dep:serde", "rusty-optics-model/serde"]

[dependencies]
rusty-optics-model = { path = "../rusty-optics-model" }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
